Update Garbage_Collection.md